Fixed the jumping hand issue

--- a/src/scss/components/_cp-clock-hand.scss
+++ b/src/scss/components/_cp-clock-hand.scss
@@ -5,8 +5,6 @@
 
 .hands {
 	@extend %pos-a;
-	transition: all 0.05s linear;
-	transition-timing-function: cubic-bezier(0, 0, 0.35, 2.04);
 
 	&::before {
 		content: "";
@@ -14,5 +12,10 @@
 		width: 40px;
 		height: 40px;
 		background: #000;
+	}
+
+	&.transition {
+		transition: all 0.05s linear;
+		transition-timing-function: cubic-bezier(0, 0, 0.35, 2.04);
 	}
 }
